--- a/Objects/RC_Car.build_log.htm
+++ b/Objects/RC_Car.build_log.htm
@@ -22,24 +22,24 @@ Dialog DLL:      TARMCM1.DLL V1.14.4.0
  
 <h2>Project:</h2>
 E:\pobrane\RC-Car-jkubuszek (2)\RC-Car-jkubuszek\RC_Car.uvprojx
-Project File Date:  12/15/2025
+Project File Date:  12/30/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'E:\Program Files\keil\ARM\ARMCLANG\Bin'
 Build target 'FRDM_KL05ZJ'
-steering.c(42): warning: no newline at end of file [-Wnewline-eof]
-}
- ^
-steering.c(6): warning: unused variable 'rspeed' [-Wunused-variable]
-    int16_t rspeed, lspeed;
-            ^
-steering.c(6): warning: unused variable 'lspeed' [-Wunused-variable]
-    int16_t rspeed, lspeed;
-                    ^
+PIDreg.c(12): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+                        z = data[0]<<8 | data[1];
+                          ~ ~~~~~~~~~~~^~~~~~~~~
+PIDreg.c(13): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+                        z = z - gyro_error;
+                          ~ ~~^~~~~~~~~~~~
+PIDreg.c(21): warning: implicit conversion loses integer precision: 'int' to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
+                        steer = pid/128;
+                              ~ ~~~^~~~
 3 warnings generated.
-compiling steering.c...
+compiling PIDreg.c...
 linking...
-Program Size: Code=1544 RO-data=236 RW-data=0 ZI-data=392  
+Program Size: Code=3204 RO-data=224 RW-data=4 ZI-data=432  
 ".\Objects\RC_Car.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -66,9 +66,9 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\system_MKL05Z4.c
       Source file:   Device\Source\ARM\startup_MKL05Z4.s
-Build Time Elapsed:  00:00:00
+      Source file:   Device\Source\system_MKL05Z4.c
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
